# zephyr-stm32-demo

./: .clang-format  CMakeLists.txt  LICENSE  README.md  README.rst  prj.conf  project.code-workspace  west.yml
.github/workflows/: build.yml
demo/: bin-mode.tape  text-mode.tape
proto/: message.proto
src/: app.c  app.h  basic_osal.c  basic_osal.h  conf.c  conf.h  host_interface.c  host_interface.h  main.c  sensor.c  sensor.h
